Construcción del contenido del artículo

--- a/index.html
+++ b/index.html
@@ -14,5 +14,24 @@
     </div>
     <h1 class="main_title">Tendencias en el Diseño Web Actual</h1>
   </section>
+  <section class="article">
+    <p>
+      ¿Te interesa el desarrollo web?
+    </p>
+    <p>
+      A continuación presentamos algunas de las tendencias en el diseño de sitios web.
+    </p>
+
+    <h2>Gigantismo</h2>
+    <figure>
+      <img src="./img/giantism.jpg" alt="Giantism">
+    </figure>
+    <p>
+      La época de las tipografías de 12 puntos y textos imposibles de leer han acabado.
+    </p>
+    <p>
+      Titulares gigantes encima de las fotos, siendo los auténticos protagonistas.
+    </p>
+  </section>
 </body>
 </html>
