Se completó el artículo agregando el contenido que faltaba

--- a/index.html
+++ b/index.html
@@ -23,15 +23,150 @@
     </p>
 
     <h2>Gigantismo</h2>
-    <figure>
-      <img src="./img/giantism.jpg" alt="Giantism">
-    </figure>
-    <p>
-      La época de las tipografías de 12 puntos y textos imposibles de leer han acabado.
-    </p>
-    <p>
-      Titulares gigantes encima de las fotos, siendo los auténticos protagonistas.
-    </p>
+      <figure>
+        <img src="./img/giantism.jpg" alt="Giantism">
+      </figure>
+      <p>
+        La época de las tipografías de 12 puntos y textos imposibles de leer han acabado.
+      </p>
+      <p>
+        Titulares gigantes encima de las fotos, siendo los auténticos protagonistas.
+      </p>
+
+    <h2>Personalidad propia</h2>
+      <figure>
+        <img src="./img/personality.gif" alt="Personality">
+      </figure>
+      <p>
+        Todo el mundo tiene acceso a imágenes de archivo, a los unsplash de turno.
+        Y por eso, cade vez es más necesario tener una personalidad visual propia.
+        Ilustraciones que transmitan una marca de forma única.
+      </p>
+
+    <h2>Experiencia multimedia</h2>
+      <figure>
+        <img src="./img/multimedia.gif" alt="Multimedia">
+      </figure>
+      <p>
+        Sí las imágenes cautivan, ¿qué decir de los videos?. Este recurso se
+        está utilizando cada vez más: videos cortos que brindan una breve
+        sinopsis de la web, algunos de la web, algunos reproducidos en bucle
+        desde el home. Gracias a HTML5 es posible elevar un sitio web a un
+        diseño multimedia nunca antes pensado, con animaciones y una experiencia
+        de usuario fantástica.
+      </p>
+
+    <h2>Animaciones</h2>
+      <figure>
+        <img src="./img/animations.gif" alt="Animations">
+      </figure>
+      <p>
+        Está claro que hoy, más que nunca, necesitamos captar la atención de
+        nuestra audiencia. Por ello, animar fondos, formas, e imágenes es casi
+        un fundamental si queremos estar a la altura de las expectativas.
+      </p>
+
+    <h2>Anti-estándar. La busquedad de lo eclético</h2>
+      <figure>
+        <img src="./img/eclectic.gif" alt="Eclectic">
+      </figure>
+      <p>
+        Tener un diseño bonito hoy en día es muy fácil. Tan solo hay que
+        descargarse una plantilla cualquiera de alguna de las cientos de plantillas
+        que hay en el mercado.
+      </p>
+      <p>
+        Sin embargo, diferenciarse es vital, cada vez más, y por eso debemos evitar,
+        lo máximo que podamos, estándares y repetir fórmulas. Hay que sorprender a
+        nuestra audiencia desde el primer segundo.
+      </p>
+
+      <h2>Explosión de color</h2>
+        <figure>
+          <img src="./img/colors.jpg" alt="Colors">
+        </figure>
+        <p>
+          Atrás han quedado los tonos apagados. Es la época del destape y estamos
+          viviendo un aunténttico renacimiento de la creatividad en cuanto a colores,
+          formas y animaciones se refiere.
+        </p>
+
+      <h2>Menús mobile desde el escritorio</h2>
+        <figure>
+          <img src="./img/mobile.gif" alt="Mobile">
+        </figure>
+        <p>
+          Estamos acostumbrados al modelo estándar del menú en los sitios web, pues es
+          uno de los elementos que menos cambios ha tenido y los usuarios ya están
+          acostumbrados a ellos. Sin embargo, el incremento de la utilización de
+          dispositivos móviles nos regala una nueva tendencia en el diseño de sitios
+          para escritorio: la utilización del menú escondido que usamos para el diseño
+          móvil, simplificando así la visualización.
+        </p>
+
+      <h2>Tipografía</h2>
+        <figure>
+          <img src="./img/typography.jpg" alt="Typography">
+        </figure>
+        <p>
+          Llevamos ya unos años de bonanza. Este próximo año no será menos y seguiremos
+          viendo explosión de creatividad tipográfica. Desde marcas que se hacen sus propias
+          tipografías (y por supuesto las ponen al alcance de todos) a combinaciones imposibles,
+          y si podemos las animamos.
+        </p>
+
+        <h2>Responsive Design</h2>
+          <figure>
+            <img src="./img/responsive.jpg" alt="Responsive Design">
+          </figure>
+          <p>
+            Con la tendencia de Responsive Web Design en su auge se espera que los sitios hechos
+            solo para móviles vayan desapareciendo y, finalmente, casi todos los sitios se adapten
+            a la filosofía Responsive.
+          </p>
+
+        <h2>Rapidez y rendimiento</h2>
+          <figure>
+            <img src="./img/performance.gif" alt="Performance">
+          </figure>
+          <p>
+            Una tendencia marcada, que probablemente ha dado origen a las demás, es la búsqueda de
+            una mayor rapidez y rendimiento de los sitios webs. ¿Por qué? sencillo, una mejor Experiencia
+            de usuario permite generar mayor conversión. Por tanto, diseñadores y desarrolladores seguirán
+            investigando nuevos modos de crear sitios web atractivos cuidando siepre los elementos que utilicen,
+            fijándose en el peso y velocidad.
+          </p>
+          <p>
+            ¿Cuánto es rápido? Pues más. Cuanto más rápido carguen tus contenidos mejor para todos. No perderás
+            visitas, Google te tratará mejor.
+          </p>
+
+        <h2>Supremacía del scroll</h2>
+          <figure>
+            <img src="./img/scroll.gif" alt="Scroll">
+          </figure>
+          <p>
+            Tenemos una clara tendencia del uso del scroll en la navegación de un sitio web, sobre todo en las
+            páginas de inicio. Probablemente, una de sus principales razones es el incremento de navegabilidad
+            desde dispositivos móviles. Cuando ingresamos a un sitio desde una tablet o un celular, dar clic
+            sobre un botón y esperar que nos vincule hacia otra página puede resultar muy tedioso. Los usuarios
+            esperan poder desplazarse en una sola página y encontrar toda la información que necesitan, sobre
+            todo los usuarios provenientes del mundo móvil.
+          </p>
+          <p>
+            Además, cabe mencionar que otra tendencia que viene con el scroll es la adición de la animación agregada
+            al navegar por la web, en la cual la animación va iniciando conforme vamos bajando en el scroll.
+          </p>
+
+        <h2>Flat Design</h2>
+          <figure>
+            <img src="./img/flat.jpg" alt="Flat Design">
+          </figure>
+          <p>
+            ¡El diseño flat continúa vigente! Lleva puesta la corona en el diseño ya desde hace un par de años y
+            mantendrá su puesto, por fortuna, ya que este tipo de diseño y minimalista propicia una comunicación
+            muy efectiva. Esta tendencia se encontrará especialmente en íconos, menús e ilustraciones.
+          </p>
   </section>
 </body>
 </html>
